# OyasumiVR

./: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  LICENSE.md  README.md  README_ID.md  README_JP.md  README_KO.md  README_TW.md  README_zh_CN.md  README_zh_TW.md  Readme_TW.md  angular.json  eslint.config.js  karma.conf.js  mdns-sidecar.sln  overlay-sidecar.sln  oyasumivr-overlay-sidecar.sln  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
.github/: FUNDING.yml
.run/: Build Elevated Sidecar.run.xml  Build Overlay Sidecar.run.xml  Build Sidecars.run.xml  Build.run.xml  Clean & Reinitialize.run.xml  Generate gRPC Web Clients.run.xml  Init.run.xml  Run Dev Mode.run.xml  Run Dev Mode_ Core.run.xml  Run Dev Mode_ Overlay.run.xml  Run Overlay UI.run.xml  Run Release Mode.run.xml
docs/: i18n_template_download.html  translation_contributors.json
elevated-sidecar/: Cargo.toml
overlay-sidecar/: IPCManager.cs  NotificationOverlay.cs  OVRManager.cs  OffScreenBrowser.cs  Program.cs  WinApi.cs  overlay-sidecar.csproj
overlay-web/: package-lock.json  package.json  svelte.config.js
proto/: elevated-sidecar.proto  overlay-sidecar.proto  oyasumi-core.proto
protobuf/: notification.proto  oyasumi-core.proto
scripts/: build-preload-assets.js  copy-dependencies.js  elevated-sidecar-post-build.js  mdns-sidecar-post-build.js  move-sidecar-build.js  overlay-sidecar-post-build.js  postinstall.js  pre-build.js  readme-generator.js  set-build-id.js  set-dotnet-version.js  set-flavour.js  set-version.js  sidecar-post-build.js  splashscreen-blurhash.js  translation-converter.js  translation-utils.js  ts-proto-gen.ps1
src/: main.ts  (+2 more)
src-core/: .gitignore  .mdns-sidecar-rev  2  Cargo.toml  build.rs  flags.toml  openvr.txt  tauri.conf.json
src-core/capabilities/: default.json  main.json  migrated.json  splashscreen.json
src-core/installer/: installer.nsi
src-core/macros/: Cargo.toml
src-core/macros/src/: lib.rs
src-core/resources/: .gitignore  manifest.vrmanifest
src-core/resources/input/: action_manifest.json  default_knuckles.json  default_oculus_touch.json  default_vive_controller.json
src-core/resources/sounds/: .gitignore  LICENSES_AND_CREDITS.md  credit.txt
src-core/src/: flavour.rs  globals.rs  main.rs
src-core/src/adb/: commands.rs  mod.rs  models.rs
src-core/src/commands/: afterburner.rs  debug.rs  log_utils.rs  mod.rs  notifications.rs  nvml.rs  splash.rs  time.rs
src-core/src/discord/: commands.rs  mod.rs
src-core/src/elevated_sidecar/: commands.rs  mod.rs
src-core/src/grpc/: commands.rs  mod.rs  server.rs
src-core/src/hardware/: mod.rs
src-core/src/hardware/beyond/: commands.rs  detector.rs  mod.rs
src-core/src/http/: commands.rs  mod.rs
src-core/src/image_cache/: commands.rs  mod.rs
src-core/src/lighthouse/: commands.rs  mod.rs  models.rs
src-core/src/mdns_sidecar/: commands.rs  mod.rs
src-core/src/migrations/: mod.rs  old_wix_uninstall.rs
src-core/src/openvr/: brightness_analog.rs  brightness_overlay.rs  chaperone.rs  colortemp_analog.rs  commands.rs  devices.rs  framelimiter.rs  gesture_detector.rs  mod.rs  models.rs  sleep_detector.rs  supersampling.rs
src-core/src/os/: commands.rs  dotnet.rs  elevation.rs  mod.rs  models.rs  sounds_gen.rs
src-core/src/os/audio/: device.rs  manager.rs  wrappers.rs
src-core/src/os/audio_devices/: device.rs  manager.rs  mod.rs
src-core/src/osc/: commands.rs  mod.rs  models.rs  vrchat.rs
src-core/src/overlay_sidecar/: commands.rs  mod.rs
src-core/src/steam/: commands.rs  mod.rs
src-core/src/system_tray/: commands.rs  mod.rs
src-core/src/telemetry/: commands.rs  mod.rs
src-core/src/utils/: mod.rs  models.rs  profiling.rs  serialization.rs  sidecar_manager.rs
src-core/src/vrc_log_parser/: commands.rs  mod.rs
src-core/src/vrcx/: commands.rs  mod.rs  models.rs
src-elevated-sidecar/: Cargo.toml  build.rs
src-elevated-sidecar/.cargo/: config.toml
src-elevated-sidecar/src/: afterburner.rs  http_handler.rs  main.rs  nvml.rs  windows.rs
src-elevated-sidecar/src/grpc/: mod.rs  server.rs
src-grpc-web-client/: README.md  elevated-sidecar_pb.client.ts  elevated-sidecar_pb.ts  overlay-sidecar_pb.client.ts  overlay-sidecar_pb.ts  oyasumi-core_pb.client.ts  oyasumi-core_pb.ts
src-mdns-sidecar/: Globals.cs  IpcManager.cs  Program.cs  app.manifest  mdns-sidecar.csproj
src-overlay-sidecar/: .gitignore  Globals.cs  IPCManager.cs  Math.cs  NotificationOverlay.cs  OVRManager.cs  Program.cs  WinApi.cs  app.manifest  appsettings.Development.json  appsettings.json  openvr.txt  openvr_api.cs  (+4 more)
src-shared/: Cargo.toml
src-shared-rust/: Cargo.toml
src-shared-rust/src/: windows.rs
src-shared/src/: lib.rs  models.rs  windows.rs
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: background.rs  elevated_sidecar.rs  gesture_detector.rs  image_cache.rs  main.rs  models.rs  sleep_detector.rs  system_tray.rs  utils.rs  windows_oyasumi.rs
src-tauri/src/background/: http_server.rs  log_parser.rs  openvr.rs  osc.rs
src-tauri/src/commands/: admin.rs  afterburner.rs  fs.rs  http.rs  image_cache.rs  lighthouse.rs  log_parser.rs  log_utils.rs  mod.rs  notifications.rs  nvml.rs  openvr.rs  os.rs  osc.rs  splash.rs  system_tray.rs  windows.rs
src-tauri/src/elevated_sidecar/: commands.rs  mod.rs
src-tauri/src/grpc/: mod.rs  server.rs
src-tauri/src/http_server/: commands.rs  mod.rs
src-tauri/src/image_cache/: mod.rs
src-tauri/src/lighthouse/: commands.rs  mod.rs  models.rs
src-tauri/src/modules/: http_server.rs  osc.rs
src-tauri/src/modules/lighthouse/: mod.rs
src-tauri/src/openvr/: brightness_overlay.rs  chaperone.rs  commands.rs  devices.rs  gesture_detector.rs  mod.rs  models.rs  sleep_detector.rs
src-tauri/src/os/: commands.rs  mod.rs  models.rs
src-tauri/src/osc/: commands.rs  mod.rs
src-tauri/src/ovr_brightness/: commands.rs  mod.rs
src-tauri/src/system_tray/: commands.rs  mod.rs
src-tauri/src/utils/: mod.rs
src-tauri/src/vrc_log_parser/: commands.rs  mod.rs
(+1293 files in other folders)
