[package]
name = "oyasumivr"
version = "25.6.2"
description = ""
authors = ["Raphiiko"]
license = "MIT"
repository = "https://github.com/Raphiiko/Oyasumi"
default-run = "oyasumivr"
edition = "2021"

[build-dependencies]
reqwest = { version = "0.12.15", features = ["blocking"] }
tauri-build = { version = "2.2", features = [] }
toml = "0.8.20"
tonic-build = { version = "0.13.0", features = [] }

[dependencies]
async-recursion = "1.0.5"
bluest = { version = "0.6.7", features = ["serde"] }
byteorder = "1.4.3"
bytes = "1.4.0"
chrono = "0.4.24"
config = "0.15.11"
cronjob = "0.4.17"
discord-sdk = "0.4.0"
enumset = "1.1.3"
futures = "0.3"
futures-util = "0.3.28"
hidapi = "2.6.0"
hyper = { version = "0.14.26", features = ["full"] }
lazy_static = "1.4.0"
log = "^0.4"
md5 = "0.7.0"
mime = "0.3.17"
mime_guess = "2.0.4"
nalgebra = "0.33.2"
oyasumivr-shared = { path = "../src-shared-rust", version = '*' }
oyasumivr_macros = { path = "./macros" }
prost = "0.13.5"
public-ip = "0.2.2"
readonly = "0.2"
regex = "1.10.2"
reqwest = "0.12.15"
rodio = "0.20.1"
rosc = "0.11.4"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
steamlocate = "2.0.1"
steamworks = { version = "0.11.0" }
strum = "0.27.1"
strum_macros = "0.27.1"
substring = "1.4.5"
suncalc = "0.4.0"
sysinfo = "0.26.9"
system_shutdown = "4.0.1"
tauri-plugin-cli = "2.2"
tauri-plugin-clipboard-manager = "2.2"
tauri-plugin-deep-link = "2.2"
tauri-plugin-dialog = "2.2"
tauri-plugin-fs = "2.2"
tauri-plugin-http = { version = "2.4", features = ["unsafe-headers"] }
tauri-plugin-log = { version = "2.4" }
tauri-plugin-notification = "2.2"
tauri-plugin-process = "2.2"
tauri-plugin-shell = "2.2"
tauri-plugin-single-instance = { version = "2.2", features = ["deep-link"] }
tauri-plugin-store = "2.2"
tauri-plugin-aptabase = { git = "https://github.com/aptabase/tauri-plugin-aptabase" }
tempfile = "3.6.0"
time = "0.3.41"
tokio = { version = "1.41.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
tokio-util = "0.7.12"
tonic = "0.13.0"
tonic-web = "0.13.0"
url = "2.3.1"
urlencoding = "2.1.2"
uuid = "1.3.3"
webview2-com = "0.37.0"
widestring = "1.0.2"
winapi = { version = "0.3.9", features = [
  "handleapi",
  "processthreadsapi",
  "winnt",
  "securitybaseapi",
  "impl-default",
  "powersetting",
  "powrprof",
] }
windows = { version = "0.51.1", features = [
  "implement",
  "Win32_Foundation",
  "Win32_Devices_FunctionDiscovery",
  "Win32_Media_Audio_Endpoints",
  "Win32_System_Com_StructuredStorage",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_System_Variant",
  "Win32_System_Console",
], default-features = false }
windows-sys = { version = "0.36.1", features = [
  "Win32_UI_Shell",
  "Win32_Foundation",
] }
winreg = "0.55.0"
dirs = "6.0.0"
tauri-plugin-opener = "2"

[dependencies.ipgeolocate]
git = "https://github.com/Raphiiko/ipgeolocate_oyasumi.git"
rev = "5f24925"
# path = "../../oyasumivr_oscquery"

[dependencies.ovr_overlay]
git = "https://github.com/Raphiiko/ovr_overlay_oyasumi"
rev = "a2afdea5fa9171b0151f8da271fcdd7cdc2beb41"
# path = "../../ovr_overlay_oyasumi"
features = ["ovr_system", "ovr_settings"]

[dependencies.oyasumivr_oscquery]
git = "https://github.com/Raphiiko/oyasumivr_oscquery.git"
rev = "47c00b5fab8d7a45ba3254873ca7886f84483560"

[dependencies.tauri]
version = "2.5"
features = [
  "devtools", "tray-icon",
]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
