[package]
name = "oyasumivr"
version = "25.6.12"
description = ""
authors = ["Raphiiko"]
license = "MIT"
repository = "https://github.com/Raphiiko/Oyasumi"
default-run = "oyasumivr"
edition = "2021"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-updater = "2.9.0"

[dependencies]
async-recursion = "1.1.1"
bluest = { version = "0.6.9", features = ["serde"] }
byteorder = "1.5.0"
bytes = "1.11.0"
chrono = "0.4.42"
config = "0.15.19"
cronjob = "0.4.17"
dirs = "6.0.0"
discord-sdk = "0.4.0"
enumset = "1.1.6"
futures = "0.3.31"
futures-util = "0.3.31"
hidapi = "2.6.3"
hyper = { version = "0.14.32", features = ["full"] }
log = { version = "0.4.27", features = ["release_max_level_info"] }
md5 = "0.8.0"
mime = "0.3.17"
mime_guess = "2.0.5"
nalgebra = "0.34.1"
named_pipe = "0.4.1"
oyasumivr-shared = { path = "../src-shared-rust", version = '*' }
oyasumivr_macros = { path = "./macros" }
prost = "0.13.5"
public-ip = "0.2.2"
readonly = "0.2.13"
regex = "1.12.2"
reqwest = "0.12.24"
rodio = "0.20.1"
rosc = "0.11.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
steamlocate = "2.0.1"
steamworks = { version = "0.11.0" }
strum = "0.27.2"
strum_macros = "0.27.2"
substring = "1.4.5"
suncalc = "0.4.0"
sysinfo = "0.37.2"
system_shutdown = "4.0.1"
tauri-plugin-aptabase = { git = "https://github.com/aptabase/tauri-plugin-aptabase", rev = "7cc36ccce0052352bda7272a4acb25a214c4b804" }
tauri-plugin-cli = "2.4.1"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-deep-link = "2.4.5"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.4"
tauri-plugin-http = { version = "2.5.4", features = ["unsafe-headers"] }
tauri-plugin-log = { version = "2.7.1" }
tauri-plugin-notification = "2.3.3"
tauri-plugin-opener = "2.5.2"
tauri-plugin-process = "2.3.1"
tauri-plugin-shell = "2.3.3"
tauri-plugin-single-instance = { version = "2.3.6", features = ["deep-link"] }
tauri-plugin-store = "2.4.1"
tempfile = "3.23.0"
time = "0.3.44"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
tokio-util = "0.7.17"
tonic = "0.13.1"
tonic-web = "0.13.1"
url = "2.5.7"
urlencoding = "2.1.3"
uuid = { version = "1.18.1", features = [
    "v4",
] }
webview2-com = "0.38.0"
widestring = "1.2.1"
windows = { version = "0.54.0", features = [
  "implement",
  "Win32_Foundation",
  "Win32_Devices_FunctionDiscovery", 
  "Win32_Media_Audio_Endpoints",
  "Win32_System_Com_StructuredStorage",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_System_Variant",
  "Win32_System_Console",
  "Win32_System_Power",
  "Win32_System_Registry",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_LibraryLoader",
  "Win32_Graphics_Gdi",
], default-features = false }
windows-sys = { version = "0.61.2", features = [
  "Win32_UI_Shell",
  "Win32_Foundation",
] }
winreg = "0.55.0"

[dependencies.ipgeolocate]
git = "https://github.com/Raphiiko/ipgeolocate_oyasumi.git"
rev = "5f24925"

[dependencies.ovr_overlay]
git = "https://github.com/Raphiiko/ovr_overlay_oyasumi"
rev = "a2afdea5fa9171b0151f8da271fcdd7cdc2beb41"
# path = "../../ovr_overlay_oyasumi"
features = ["ovr_system", "ovr_settings"]

[dependencies.oyasumivr_oscquery]
git = "https://github.com/Raphiiko/oyasumivr_oscquery.git"
rev = "47c00b5fab8d7a45ba3254873ca7886f84483560"
# path = "../../oyasumivr_oscquery"

[dependencies.tauri]
version = "2.9.3"
features = ["devtools", "tray-icon"]

[build-dependencies]
reqwest = { version = "0.12.24", features = ["blocking"] }
tauri-build = { version = "2.5.2", features = [] }
toml = "0.9.8"
tonic-build = { version = "0.13.1", features = [] }

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
