[package]
name = "oyasumivr-elevated-sidecar"
version = "1.13.0"
authors = ["Raphiiko"]
license = "MIT"
edition = "2021"
rust-version = "1.71.1"

[build-dependencies]
tonic-build = "0.9"

[dependencies]
oyasumivr-shared = { path = "../src-shared-rust", version = '*' }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
nvml-wrapper = "0.8.0"
lazy_static = "1.4.0"
reqwest = "0.11.12"
sysinfo = "0.27.2"
codesigned = { git = "https://github.com/rustysec/codesigned-rs" }
log = "0.4.17"
simplelog = "^0.12.0"
directories = "4.0.1"
tonic = "0.9"
tonic-web = "0.9.2"
prost = "0.11"
tokio-stream = { version = "0.1.14", features = ["full"] }

[dependencies.windows-sys]
version = "0.36.1"
features = ["Win32_UI_Shell", "Win32_Foundation"]

[dependencies.tokio]
version = "1.21.1"
features = ["full"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
