[package]
name = "oyasumivr-elevated-sidecar"
version = "25.6.12"
authors = ["Raphiiko"]
license = "MIT"
edition = "2021"

[build-dependencies]
tonic-build = "0.13.1"

[dependencies]
oyasumivr-shared = { path = "../src-shared-rust", version = '*' }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
nvml-wrapper = "0.10.0"
lazy_static = "1.5.0"
reqwest = "0.12.20"
sysinfo = "0.35.2"
codesigned = { git = "https://github.com/rustysec/codesigned-rs" }
log = "0.4.17"
simplelog = "^0.12.2"
directories = "6.0.0"
tonic = "0.13.1"
tonic-web = "0.13.1"
prost = "0.13"
tokio-stream = { version = "0.1.17", features = ["full"] }

[dependencies.windows-sys]
version = "0.36.1"
features = ["Win32_UI_Shell", "Win32_Foundation"]

[dependencies.tokio]
version = "1.44.2"
features = ["full"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
