[package]
name = "oyasumivr-shared"
version = "1.7.3"
authors = ["Raphiiko"]
edition = "2021"
license = "MIT"
rust-version = "1.70.0"

[dependencies.winapi]
version = "0.3.9"
features = [
  "handleapi",
  "processthreadsapi",
  "winnt",
  "securitybaseapi",
  "impl-default",
]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
