[package]
name = "oyasumi"
version = "1.5.0"
description = ""
authors = ["Raphiiko"]
license = "MIT"
repository = ""
default-run = "oyasumi"
edition = "2021"
rust-version = "1.64.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
oyasumi-shared = { path = "../src-shared", version = '*' }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.1", features = ["dialog-message", "dialog-open", "fs-exists", "fs-read-dir", "fs-read-file", "http-request", "notification-all", "process-exit", "shell-execute", "shell-open", "updater"] }
lazy_static = "1.4.0"
cronjob = "0.4.17"
openvr_sys = "2.0.3"
rosc = "0.9.0"
futures = "0.3"
reqwest = "0.11.12"
sysinfo = "0.26.2"
chrono = "0.4.23"
log = "^0.4"
time = "0.3.16"
url = "2.3.1"
urlencoding = "2.1.2"
mime = "0.3.16"
md5 = "0.7.0"
mime_guess = "2.0.4"
substring = "1.4.5"
bytes = "1.4.0"
nalgebra = "0.32.1"

[dependencies.windows-sys]
version = "0.36.1"
features = ["Win32_UI_Shell", "Win32_Foundation"]

[dependencies.winapi]
version = "0.3.9"
features = ["handleapi", "processthreadsapi", "winnt", "securitybaseapi", "impl-default"]

[dependencies.tokio]
version = "1.21.1"
features = ["full"]

[dependencies.hyper]
version = "0.14.24"
features = ["full"]

[dependencies.tauri-plugin-single-instance]
git = "https://github.com/tauri-apps/tauri-plugin-single-instance"
branch = "dev"

[dependencies.tauri-plugin-store]
git = "https://github.com/tauri-apps/tauri-plugin-store"
branch = "dev"

[dependencies.tauri-plugin-fs-extra]
git = "https://github.com/tauri-apps/tauri-plugin-fs-extra"
#tag = "v0.1.0"
branch = "dev"

[dependencies.tauri-plugin-log]
git = "https://github.com/tauri-apps/tauri-plugin-log"
branch = "dev"

[dependencies.openvr]
git = "https://github.com/Raphiiko/oyasumi-rust-openvr"
rev = "c2f95d27a6f911cf360420b2279f0d1c9f2af52e"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
