[package]
name = "oyasumi"
version = "1.7.0"
description = ""
authors = ["Raphiiko"]
license = "MIT"
repository = "https://github.com/Raphiiko/Oyasumi"
default-run = "oyasumi"
edition = "2021"
rust-version = "1.64.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
oyasumi-shared = { path = "../src-shared", version = '*' }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
cronjob = "0.4.17"
openvr_sys = "2.0.3"
rosc = "0.9.1"
futures = "0.3"
reqwest = "0.11.14"
sysinfo = "0.26.9"
chrono = "0.4.23"
log = "^0.4"
time = "0.3.20"
url = "2.3.1"
urlencoding = "2.1.2"
mime = "0.3.16"
md5 = "0.7.0"
mime_guess = "2.0.4"
substring = "1.4.5"
bytes = "1.4.0"
nalgebra = "0.32.2"
soloud = "1.0.2"
crossbeam-channel = "0.5.7"
tauri-plugin-fs-extra = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
windows-sys = { version = "0.36.1", features = ["Win32_UI_Shell", "Win32_Foundation"] }
winapi = { version = "0.3.9", features = ["handleapi", "processthreadsapi", "winnt", "securitybaseapi", "impl-default"] }
tokio = { version = "1.26.0", features = ["full"] }
hyper = { version = "0.14.24", features = ["full"] }

[dependencies.tauri]
version = "1.2.4"
features = [ "path-all", "process-relaunch",
  "system-tray",
  "dialog-message",
  "dialog-open",
  "fs-exists",
  "fs-read-dir",
  "fs-read-file",
  "http-request",
  "notification-all",
  "process-exit",
  "shell-execute",
  "shell-open",
  "updater"
]

[dependencies.openvr]
git = "https://github.com/Raphiiko/oyasumi-rust-openvr"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
