[package]
name = "oyasumivr"
version = "1.7.0"
description = ""
authors = ["Raphiiko"]
license = "MIT"
repository = "https://github.com/Raphiiko/Oyasumi"
default-run = "oyasumivr"
edition = "2021"
rust-version = "1.64.0"

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
oyasumivr-shared = { path = "../src-shared", version = '*' }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
cronjob = "0.4.17"
rosc = "0.10.1"
futures = "0.3"
reqwest = "0.11.17"
sysinfo = "0.26.9"
chrono = "0.4.24"
log = "^0.4"
url = "2.3.1"
urlencoding = "2.1.2"
mime = "0.3.17"
md5 = "0.7.0"
mime_guess = "2.0.4"
substring = "1.4.5"
bytes = "1.4.0"
nalgebra = "0.32.2"
soloud = "1.0.2"
time = "0.3.15"
tauri-plugin-fs-extra = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
windows-sys = { version = "0.36.1", features = [
  "Win32_UI_Shell",
  "Win32_Foundation",
] }
winapi = { version = "0.3.9", features = [
  "handleapi",
  "processthreadsapi",
  "winnt",
  "securitybaseapi",
  "impl-default",
] }
tokio = { version = "1.28.0", features = ["full"] }
hyper = { version = "0.14.26", features = ["full"] }
uuid = "1.3.3"
tokio-util = "0.7.8"
bluest = { version = "0.5.3", features = ["serde"] }
futures-util = "0.3.28"
byteorder = "1.4.3"
winreg = "0.50.0"

[dependencies.tauri]
version = "1.3.0"
features = [
  "path-all",
  "process-relaunch",
  "system-tray",
  "dialog-message",
  "dialog-open",
  "fs-exists",
  "fs-read-dir",
  "fs-read-file",
  "http-request",
  "notification-all",
  "process-exit",
  "shell-execute",
  "shell-open",
  "updater",
]

[dependencies.ovr_overlay]
git = "https://github.com/Raphiiko/ovr_overlay_oyasumi"
rev = "4214b3ca193c0d1ede8aae6b71615405f5328089"
features = ["ovr_system", "ovr_settings"]

[patch.crates-io]
# Fix for broken window transparency in Tauri v1.3.0.
# https://github.com/tauri-apps/tauri/issues/6868
# Remove once fixed.
tao = { git = "https://github.com/tauri-apps/tao", branch = "v0.16" }
tauri = { git = "https://github.com/Raphiiko/tauri", rev = "c7325372bdcffa97fd6ee8bc41e12800f47195be" }
tauri-build = { git = "https://github.com/Raphiiko/tauri", rev = "c7325372bdcffa97fd6ee8bc41e12800f47195be" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
